# ag-id

./: .gitignore  .phi.toml  BENCHMARKS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  LICENSE-APACHE  LICENSE-MIT  PUBLISHING.md  README.md  ROADMAP.md  SECURITY.md  SPEC.md  deny.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
benches/: throughput.rs
conformance/: README.md
conformance/witnesses/python/: README.md  agid_v1_witness.py
docs/: BENCHMARKS.md  CLAIMS_LEDGER.md  LIMITATIONS.md  RELEASE_READINESS.md  STATUS.md  TRUTH_TABLE.md
evidence/: README.md  conformance_v1.json  release_gate.json  validation_summary_v1.json
examples/: basic.rs  hmac_wrapping.rs  parsing.rs
scripts/: cargo_deny_gate.sh  claims_ledger_gate.sh  validation_gate.sh
src/: derive.rs  did.rs  domain.rs  encode.rs  error.rs  lib.rs  serde_impl.rs
test-vectors/: v1.json
tests/: determinism.rs  properties.rs  serde_roundtrip.rs  vector_export.rs  vectors.rs  vectors_json.rs
